--- a/tic-tac-cattle-toe/app/components/GameArea/GameArea.module.css
+++ b/tic-tac-cattle-toe/app/components/GameArea/GameArea.module.css
@@ -1,7 +1,17 @@
-.Wrapper {
+.wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
+  border-radius: var(--card-radius);
+  width: 100%;
+  height: calc(100vh - 32px);
+  background-color: rgba(0, 0, 0, 0.3);
+  margin: 16px;
+
+  @media (min-width: 500px) {
+    min-width: 450px;
+    width: auto;
+  }
 }
