--- a/tic-tac-cattle-toe/app/page.module.css
+++ b/tic-tac-cattle-toe/app/page.module.css
@@ -1,30 +1,26 @@
 .page {
   --background: #fafafa;
-  --foreground: #fff;
+  --foreground: rgba(0, 0, 0, 0.1);
 
   --text-primary: #000;
-  --text-secondary: #666;
+  --text-secondary: #f0f0f0;
 
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
   --button-secondary-border: #ebebeb;
 
+  --card-radius: 50px;
+  
+  --cell-radius: 8px;
+
   display: flex;
   min-height: 100vh;
-  align-items: center;
   justify-content: center;
   font-family: var(--font-geist-sans);
-  background-color: var(--background);
-}
+  background-image: url("./assets/img/bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 
-.main {
-  display: flex;
-  min-height: 100vh;
-  width: 100%;
-  max-width: 800px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--foreground);
-  padding: 40px 60px;
 }
