--- a/tic-tac-cattle-toe/app/components/GameArea/GameArea.module.css
+++ b/tic-tac-cattle-toe/app/components/GameArea/GameArea.module.css
@@ -9,6 +9,7 @@
   height: calc(100vh - 32px);
   background-color: rgba(0, 0, 0, 0.3);
   margin: 16px;
+  padding: 16px;
 
   @media (min-width: 500px) {
     min-width: 450px;
