--- a/tic-tac-cattle-toe/app/components/WeatherInfo/LocationSelector.module.css
+++ b/tic-tac-cattle-toe/app/components/WeatherInfo/LocationSelector.module.css
@@ -1,4 +1,4 @@
-.Wrapper {
+.wrapper {
   
   max-height: 40vh;
   overflow-y: auto;
@@ -30,7 +30,7 @@
   }
 }
 
-.Trigger {
+.trigger {
   display: flex;
   gap: 4px;
   align-items: center;
